implemented a basic like and dislike thing

--- a/frontend/src/Components/CreatePost.module.scss
+++ b/frontend/src/Components/CreatePost.module.scss
@@ -38,8 +38,7 @@ textarea {
     }
 }
 
-/* Buttons */
-button {
+.imageBtn, .videoBtn, .postButton {
     width: 100%;
     padding: 10px;
     background-color: #007bff;
