--- a/frontend/src/Home/Content.module.scss
+++ b/frontend/src/Home/Content.module.scss
@@ -5,6 +5,7 @@
 }
 
 .wrapper {
+    width: calc(100vw - 300px);
     padding: 20px;
     overflow-y: auto;
     height: calc(100vh - 60px);
@@ -23,6 +24,11 @@
         background: transparent;
     }
 
+}
+
+button {
+    padding: 5px 10px;
+    border-radius: 20px;
 }
 
 .contentWrapper {
