Planning to implement users profile functions

--- a/frontend/src/Home/Profile.module.scss
+++ b/frontend/src/Home/Profile.module.scss
@@ -26,3 +26,14 @@
     border-radius: 50%;
     background-color: pink;
 }
+
+.relationWrapper {
+    display: flex;
+    font-size: 10px;
+    gap: 10px;
+    font-weight: 700;
+}
+
+.post {
+    font-weight: 700;
+}
